[gd_scene load_steps=4 format=3 uid="uid://25vk56eq2a0v"]

[ext_resource type="Script" uid="uid://dpgn8wo4kft1d" path="res://menus/lose/lose.gd" id="1_mcxa0"]
[ext_resource type="Theme" uid="uid://b3riqp06mymfj" path="res://menus/main_menu/theme.tres" id="2_e64mb"]

[sub_resource type="LabelSettings" id="LabelSettings_43nje"]
font_size = 60
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[node name="Lose" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mcxa0")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="CashLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_e64mb")
text = "Cash: "
label_settings = SubResource("LabelSettings_43nje")

[node name="CashCount" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_e64mb")
text = "0"
label_settings = SubResource("LabelSettings_43nje")

[node name="PlayAgain" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_e64mb")
text = "Play Again"

[node name="MainMenu" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_e64mb")
text = "Return to main menu"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_e64mb")
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
